data/derived/comb/progs/unify/prog7415.ml.out
Characters 290-291:
  let (duh, res) = List.fold_left f base args in
                                  ^
Error: This expression has type
         int list * int list list -> int * int -> int list * int list
       but an expression was expected of type
         int list * int list list -> int * int -> int list * int list list
       Type int is not compatible with type int list 
